--- a/secondParcial/.project
+++ b/secondParcial/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>segundoParcial</name>
+	<name>secondParcial</name>
 	<comment></comment>
 	<projects>
 	</projects>
